[gd_scene load_steps=2 format=1]

[ext_resource path="res://Scripts/MenuPrincipal.gd" type="Script" id=1]

[node name="MenuPrincipal" type="Node"]

script/script = ExtResource( 1 )

[node name="boton_nueva_partida" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 400.0
margin/top = 194.0
margin/right = 621.0
margin/bottom = 249.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Nueva Partida"
flat = false

[node name="boton_continuar" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 401.0
margin/top = 298.0
margin/right = 622.0
margin/bottom = 353.0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Continuar"
flat = false

[connection signal="pressed" from="boton_nueva_partida" to="." method="_on_boton_nueva_partida_pressed"]

[connection signal="pressed" from="boton_continuar" to="." method="_on_boton_continuar_pressed"]


